--- a/app/views/bigos_location_box/module/_item.html.erb
+++ b/app/views/bigos_location_box/module/_item.html.erb
@@ -1,4 +1,4 @@
-<%= hidden_field_tag :marker_icon, asset_path( BigosLocationBox::Setting["#{BigosContactBox.name}.marker_icon_src"]) unless  BigosLocationBox::Setting["#{BigosLocationBox.name}.marker_icon_src"].blank? %>
+<%= hidden_field_tag :marker_icon, asset_path( BigosLocationBox::Setting["#{BigosLocationBox.name}.marker_icon_src"]) unless  BigosLocationBox::Setting["#{BigosLocationBox.name}.marker_icon_src"].blank? %>
 <%= hidden_field_tag :map_zoom,  BigosLocationBox::Setting["#{BigosLocationBox.name}.map_zoom"] unless  BigosLocationBox::Setting["#{BigosLocationtBox.name}.map_zoom"].blank? %>
 <%= hidden_field_tag :latitude,  BigosLocationBox::Setting["#{BigosLocationBox.name}.latitude"] %>
 <%= hidden_field_tag :longitude, BigosLocationBox::Setting["#{BigosLocationBox.name}.longitude"] %>
