--- a/app/views/bigos_location_box/module/_widget.html.erb
+++ b/app/views/bigos_location_box/module/_widget.html.erb
@@ -1,5 +1,5 @@
 <%= hidden_field_tag :marker_icon, asset_path( BigosLocationBox::Setting["#{BigosLocationBox.name}.marker_icon_src"]) unless  BigosLocationBox::Setting["#{BigosLocationBox.name}.marker_icon_src"].blank? %>
-<%= hidden_field_tag :map_zoom,  BigosLocationBox::Setting["#{BigosLocationBox.name}.map_zoom"] unless  BigosLocationBox::Setting["#{BigosLocationtBox.name}.map_zoom"].blank? %>
+<%= hidden_field_tag :map_zoom,  BigosLocationBox::Setting["#{BigosLocationBox.name}.map_zoom"] unless BigosLocationBox::Setting["#{BigosLocationBox.name}.map_zoom"].blank? %>
 <%= hidden_field_tag :latitude,  BigosLocationBox::Setting["#{BigosLocationBox.name}.latitude"] %>
 <%= hidden_field_tag :longitude, BigosLocationBox::Setting["#{BigosLocationBox.name}.longitude"] %>
 <%= hidden_field_tag :location_name, BigosLocationBox::Setting["#{BigosLocationBox.name}.location_name"] %>
